Publish StreamVerse App

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<html><head><title>StreamVerse</title></head><body><h1>Welcome to StreamVerse</h1><p>This is a statically exported Next.js app.</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>StreamVerse</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>StreamVerse</h1>
+    </header>
+    <main id="video-grid">
+        <!-- Video cards will be injected by JavaScript -->
+    </main>
+    <script src="app.js"></script>
+</body>
+</html>
